RESOLVED FIXED227412
[iOS] Web process sometimes crashes under findDataDetectionResultElementInImageOverlay
https://bugs.webkit.org/show_bug.cgi?id=227412
Summary [iOS] Web process sometimes crashes under findDataDetectionResultElementInIma...
Wenson Hsieh
Reported 2021-06-25 16:36:53 PDT
Attachments
Patch (1.96 KB, patch)
2021-06-25 16:44 PDT, Wenson Hsieh
no flags
Fix typo (1.96 KB, patch)
2021-06-25 16:49 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-06-25 16:44:56 PDT
Devin Rousso
Comment 2 2021-06-25 16:47:07 PDT
Comment on attachment 432311 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=432311&action=review rs=me > Source/WebKit/ChangeLog:10 > + shadow root of the element responding to click events), and that the element responding to click events contains NIT: extra `)`
Wenson Hsieh
Comment 3 2021-06-25 16:47:52 PDT
(In reply to Devin Rousso from comment #2) > Comment on attachment 432311 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=432311&action=review > > rs=me > > > Source/WebKit/ChangeLog:10 > > + shadow root of the element responding to click events), and that the element responding to click events contains > > NIT: extra `)` Good catch!
Wenson Hsieh
Comment 4 2021-06-25 16:49:05 PDT
Created attachment 432312 [details] Fix typo
EWS
Comment 5 2021-06-25 17:49:24 PDT
Committed r279304 (239180@main): <https://commits.webkit.org/239180@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432312 [details].
Note You need to log in before you can comment on or make changes to this bug.