[iOS] Web process sometimes crashes under findDataDetectionResultElementInImageOverlay https://bugs.webkit.org/show_bug.cgi?id=227412 rdar://79588091

Reviewed by Devin Rousso.

Speculatively fix the crash by ensuring that the hit-tested text node inside an image overlay is inside the
shadow root of the element responding to click events, and that the element responding to click events contains
an image overlay.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::elementPositionInformation):


Canonical link: https://commits.webkit.org/239180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279304 268f45cc-cd09-0410-ab3c-d52691b4dbfc